src/modules/45-projects-orgs/pages/projects/views/ProjectListView/ProjectListView.module.scss
/*
 * Copyright 2021 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

.table {
  padding: var(--spacing-none) var(--spacing-xxlarge);
}

.colorbox {
  width: 24px;
  height: 26px;
  display: inline-block;
  border-radius: var(--spacing-xsmall);
  flex-shrink: 0;
}

.layout {
  justify-content: flex-end;
}

.projectTextContainer {
  justify-content: center;
  flex: 1 !important;
}

.project {
  max-width: 290px;
}

.org {
  max-width: 150px;
}

